Ingress/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
   - protocol: TCP
     port: <Port>
     targetPort: <Target Port>
